--- a/astonicservice/src/main/webapp/css/main.css
+++ b/astonicservice/src/main/webapp/css/main.css
@@ -23,6 +23,27 @@ html {
     line-height: 1.4;
 }
 
+.svgbox{display: inline-block;
+position: relative;
+width: 100%;
+height: 100%;
+
+vertical-align: middle;
+overflow: hidden;
+}
+
+.page{
+    width: 640px;
+    height: 900px;
+}
+
+ng-cloak { display: none; }
+textarea { width: 100%; height: 100%; }
+svg {  width: 100%;
+    height: 800px;
+    border: 1px solid black; 
+    box-sizing: border-box; }
+
 /*
  * Remove text-shadow in selection highlight: h5bp.com/i
  * These selection rule sets have to be separate.
